silences native-access warnings under tests; documents the flag
Adds --enable-native-access=ALL-UNNAMED to the :test alias's :jvm-opts
so ONNX Runtime and Smile native loads don't print restricted-method
warnings during test runs. Documents the flag in the README so consumers
can add it to their own apps for the same reason.

Co-Authored-By: Claude Opus 4.7 (1M context) <noreply@anthropic.com>